--- a/analisis_errores.tex
+++ b/analisis_errores.tex
@@ -1,100 +1,97 @@
 \chapter{Análisis de errores en la medición}
 
-Los procesos de medición son de vital importancia en toda actividad técnica y científica, los errores en las mediciones siempre 
-están presentes, son inevitables en cualquier tipo de medición. Es así, que la realización de un análisis de estos errores en 
-estas actividades son muy necesarios para evaluar con certezas toda actividad de medición. Por ejemplo en el campo de la 
-ingeniería una falla en el análisis de errores de una medición puede traer como consecuencia accidentes increíbles, por otro lado 
+En toda actividad técnica y científica se realizan todo tipo de mediciones de las diferentes magnitudes y estás siempre 
+presentan errores, éstos son inevitables en cualquier tipo de medición. Es así, que la realización de un análisis de estos 
+errores son muy necesarios para evaluar las certezas toda actividad de medición. Por ejemplo en el campo de la ingeniería una 
+falla en el análisis de errores de una medición puede traer como consecuencia accidentes increíbles, por otro lado 
  en las ciencias básicas tales como la Física, el proceso de medición y el análisis de errores poseen una importancia muy 
 marcada, pues están relacionados íntimamente con el método científico.\\
 
 En el método científico se describen de una u otra forma muchos fenómenos de la naturaleza a través de modelos matemáticos 
 simple o complejos, donde surge la necesidad de analizar aquellos  modelos ya sea de forma analítica, con lápiz y papel, o a 
-través de simulaciones numéricas, y tratando de encontrar cuáles son las consecuencias o predicciones del modelo simple. Una vez 
-obtenido este análisis, se compara con experimentos y observaciones donde las mediciones están presentes. Y por tanto en este 
-proceso lo que se busca hallar acuerdos entre las predicciones de los modelos y lo observado, y para ello resulta inevitable 
-realizar un análisis riguroso de los errores de las mediciones para establecer concordancias coherentes y veraces, de tal modo que 
-se tenga un sentido real de comprender la naturaleza. A pesar de que esta descripción simple del proceso científico es cruda y 
-epistemológicamente criticable, nos muestra que tanto el surgimiento de nuevas teorías como la verificación de sus predicciones 
-dependen de observaciones y mediciones, las cuales tienen siempre algún tipo de error en sus datos, medidas y cálculos y por tanto 
-es necesario analizar y cuantificar esos errores.
+través de simulaciones numéricas, y tratando de encontrar cuáles son sus consecuencias o predicciones. Una vez obtenido este 
+análisis, se compara con experimentos y observaciones donde las mediciones están presentes. Y por tanto en este proceso lo que se 
+busca hallar acuerdos entre las predicciones de los modelos y lo observado, y para ello resulta inevitable realizar un análisis 
+riguroso de los errores de las mediciones para establecer concordancias coherentes y veraces, de tal modo que se obtenga como 
+consecuencia conclusiones veraces y reales.
 
 \section{El proceso de medición de errores}
 
-Aunque existen innumerables procesos de medición diferentes, todos ellos culminan con la obtención de un resultado, el cual es 
-afectado por distintos errores que surgen de la interacción entre el aparato de medida, el observador y el sistema bajo 
-estudio.\\ 
+En el proceso de medición siempre existe un resultado, el cual es afectado por distintos errores que surgen de la interacción 
+entre el aparato de medida, el observador y el sistema bajo estudio.\\ 
 
-Los errores asociados a las mediciones pueden dividirse en dos grandes clases: a) \textbf{errores sistemáticos}, y b) 
-\textbf{errores aleatorios}. Los errores sistemáticos, tal como su nombre lo indica, se cometen de una misma manera cada vez que 
-se mide. Muchos errores sistemáticos pueden eliminarse aplicando correcciones muy simples. Un ejemplo de la vida diaria está en 
-el ajuste de cero que Ud. encontrará en las balanzas de baño o cocina. Otro caso de error sistemático es, por ejemplo, el asociado 
-a la medición de la presión atmosférica con un barómetro de mercurio. Allí debe corregirse la lectura por la diferencia en los 
-coeficientes de expansión térmica del mercurio y del material con que está hecha la escala del barómetro. Estos errores son 
-llamados también errores corregibles o determinados, a fines de distinguirlos de los errores aleatorios, los cuales se encuentran 
-en toda medición y están fuera del control del observador.\\ 
+Así, los errores asociados a las mediciones pueden dividirse en dos grandes clases: a) \textbf{errores sistemáticos}, y b) 
+\textbf{errores aleatorios}.\\
 
-Los errores sistemáticos no se manifiestan como fluctuaciones aleatorias en los resultados de las mediciones. Por lo tanto, dado 
-que el mismo error está involucrado en cada medición, no pueden eliminarse simplemente repitiendo las mediciones varias veces 
-(imagine, por ejemplo, que Ud. utiliza (sin darse cuenta) una regla a la que le faltan dos centímetros en el extremo del cero). 
-En cosecuencia, estos errores son particularmente serios y peligrosos, y pueden eliminarse sólo después de realizar cuidadosas 
-calibraciones y análisis de todas las posibles correcciones. Algunas veces, los errores sistemáticos se manifiestan como un 
-corrimiento en valores medidos consecutivamente o como un cambio en el valor experimental medido cuando se cambia la técnica 
-experimental de medición.\\
 
-La segunda clase de errores, los errores aleatorios o accidentales, aparecen como fluctuaciones al azar en los valores de 
-mediciones sucesivas. Estas variaciones aleatorias se deben a pequeños errores que escapan al control del observador. Por ejemplo, 
-si leemos varias veces la presión indicada por la escala de un barómetro, los valores fluctuarán alrededor de un valor medio. 
-Estrictamente hablando, nunca podremos medir el valor verdadero de ninguna cantidad, sino sólo una aproximación. El propósito del 
-tratamiento de los datos experimentales es justamente determinar el valor más probable de una cantidad medida y estimar su 
-confiabilidad.
+\subsection{Errores sistemáticos:}
+
+Los errores sistemáticos se cometen de una misma manera cada vez que se mide.  Pueden estar originados en los defectos de los 
+instrumentos de medida, en una particularidad del operador o del proceso de medición, etc. Estos errores son llamados también 
+errores corregibles o determinados, a fines de distinguirlos de los errores aleatorios, los cuales se encuentran en toda medición 
+y están fuera del control del observador. Los errores sistemáticos no se manifiestan como fluctuaciones aleatorias en los 
+resultados de las mediciones. Por lo tanto, dado que el mismo error está involucrado en cada medición, no pueden eliminarse 
+simplemente repitiendo las mediciones varias veces. En consecuencia, estos errores pueden eliminarse sólo después de realizar 
+cuidadosas calibraciones y análisis de todas las posibles correcciones. 
+
+\subsection{Errores aleatorios:}
+
+Los errores aleatorios o accidentales, aparecen como fluctuaciones al azar en los valores de mediciones consecutivas. Estas 
+variaciones aleatorias se deben a pequeños errores que escapan al control del observador. Por ejemplo, 
+si se observa varias veces la presión indicada por la escala de un barómetro, los valores fluctuarán alrededor de un valor medio. 
+De hecho de manera estricta se puede afirmar que no se puede obtener el valor verdadero de ninguna cantidad, sino sólo una 
+aproximación. El propósito del tratamiento de los datos experimentales es justamente determinar el valor más probable de una 
+cantidad medida y estimar su confiabilidad.
 
  \section{Origen de los errores}
  
 Independientemente  de  la  naturaleza  de  los  errores,  estos  pueden  deberse  a  causas  que pueden clasificarse de la 
 siguiente manera:
 
-\textbf{Errores  debidos  al  observador:} son los que se atribuyen a un defecto en las percepciones sensoriales del observador 
-(como por ejemplo mala visión) o a la posición incorrecta del mismo para observar la experiencia.
+\subsection{Errores  debidos  al  observador:} 
 
-\textbf{Errores  debidos  al  instrumento:} estos errores  dependen  del  instrumento  utilizado  y  pueden dividirse 
-en: a)Defecto  de  construcción  de  escala  o  un  corrimiento  permanente  de  la  misma: se corrigen con una correcta 
-calibración. b)Deficiencias   de   construcción o desgastes:  estos   errores   los   poseen   todos   los instrumentos  y  
-son  muy  difíciles  de  detectar  (se  pueden  acotar  con  un  correcto mantenimiento del aparato).c)Limitaciones  propias  del  
-sistema  de  lectura:  este  tipo  de  error  se  entiende  mejor  con ejemplos:  el  grosor  de  la  aguja  indicadora  o  el  
-espesor  de  la  línea  de  división  de  la escala en un instrumento analógico.
+Son los que se atribuyen a un defecto en las percepciones sensoriales del 
+observador (como por ejemplo mala visión) o a la posición incorrecta del mismo para observar la experiencia.
+
+\subsection{Errores  debidos  al  instrumento:} 
+
+Estos errores dependen del instrumento utilizado y pueden dividirse en: 
 
 \begin{itemize}
- \item \textbf{Errores  debido  al  modelo  físico  elegido:} son  aquellos  que  provienen  de  las  aproximaciones realizadas  
-al modelar la realidad con fundamentos teóricos. Por  ejemplo,  para  calcular  el período  de  un  péndulo  se  asume  que  
-este  es  puntual,  el  hilo  es  de  masa  despreciable  y  los ángulos pequeños.
+ \item[a)] Defecto de construcción de escala o un corrimiento permanente de la misma: se corrigen con una correcta calibración.
+ 
+ \item[b)] Deficiencias de construcción o desgastes: estos errores los poseen todos los instrumentos y son muy difíciles de  
+detectar (se  pueden  acotar  con  un  correcto mantenimiento del aparato).
+ 
+ \item[c)] Limitaciones propias del sistema de lectura: este tipo de error se entiende mejor con ejemplos: el grosor de la aguja 
+ indicadora o el espesor de la línea de división de la escala en un instrumento analógico.
+ \end{itemize}
 
-\item \textbf{Errores causados por el propio acto de medición:} estos errores se deben a que todas las veces que  un  
-experimentador hace  una  observación  altera  el  fenómeno  que  esta  estudiando. Por ejemplo, cuando se mide la presión de un 
-neumático con un manómetro, se libera algo de aire alterando la presión a medir.  
 
-\item \textbf{Errores producidos  por  condiciones  externas  al  proceso  de  medición:}  Este  tipo  de  errores  se deben a 
-las condiciones ambientales en las cuales se realiza una experiencia.  Son, en general, calculables en forma de correcciones para 
-cada instrumento y para cada método de medida.  
+\subsection{Errores debido al modelo físico  elegido:} 
 
-\end{itemize}
+Estos errores provienen  de  las  aproximaciones realizadas al modelar la realidad con fundamentos teóricos. Por ejemplo, para  
+calcular el período de un péndulo se asume que este es puntual, el hilo es de masa despreciable y los ángulos pequeños.
 
-\subsection{Apreciación y estimación, precisión y exactitud}
+\subsection{Errores causados por el propio acto de medición:} 
 
-Se denomina apreciación o apreciación nominal de un instrumento a la menor división de escala de ese instrumento. Mientras que 
-al menor intervalo que un observador puede estimar con ayuda de la escala se la denomina estimación de una lectura. Se  debe  
-hacer  una  clara  distinción  entre exactitud  y precisión.\\
+Estos errores se deben a que todas las veces que un experimentador hace una observación altera el fenómeno que esta estudiando. 
+Por ejemplo, cuando se mide la presión de un neumático con un manómetro, se libera algo de aire alterando la presión a medir.  
 
-Es  costumbre  generalizada, sobre  todo  en  algunas  normas relativas  a  instrumentos  de  medida,  designar  a  la  exactitud  
-como  la precisión de los mismos pero, tienen significados muy diferentes.\textbf{La exactitud} da una idea del grado de 
-aproximación con que el valor medido concuerda con el valor  verdadero;  es  decir, es  la  cercanía  del  valor  experimental  
-obtenido  al  valor  real  de  dicha medida. Se  la  asocia  con  la calidad  de  la  calibración  del  instrumento  respecto  
-de  los  patrones  de medida.\\
+\subsection{Errores producidos por condiciones externas al proceso de medición:}  
 
-\textbf{La precisión}  indica  repetibilidad  de  los  resultados;  es  decir,  el  grado  con  
-el  cual  las  medidas sucesivas arrojan idénticos valores.  También está asociada a la sensibilidad o menor variación de la 
-magnitud que se pueda detectar con un instrumento (o un método de medición). En otras palabras, la precisiónes la capacidad de un 
-instrumento de dar el mismo resultado en diferentes  mediciones  realizadas  en  las  mismas  condiciones  y exactitud  es  la  
-capacidad  de  un instrumento de medir un valor cercano al valor de la magnitud real.\\
+Este tipo de  errores  se deben a las condiciones ambientales en las cuales se realiza una experiencia.  Son, en general, 
+calculables en forma de correcciones para cada instrumento y para cada método de medida.  
+
+
+\section{Precisión y exactitud}
+
+Es costumbre generalizada, sobre todo en algunas normas relativas a instrumentos de medida, designar a la exactitud como la 
+precisión de los mismos pero, tienen significados muy diferentes. \textbf{La exactitud} da una idea del grado de aproximación con 
+que el valor medido concuerda con el valor  verdadero;  es decir, es la cercanía del valor experimental obtenido respecto al 
+valor real de dicha medida. Por otro lado, \textbf{La precisión} se refiere a la repetibilidad de los resultados; es decir, el  
+grado con el cual las medidas sucesivas arrojan idénticos valores. También está asociada a la sensibilidad o menor variación 
+de la magnitud que se pueda detectar con un instrumento (o un método de medición).\\
 
 Existen dos maneras de cuantificar el error de medición:\\
 
@@ -113,9 +110,9 @@ real.
 
 \subsection{Resultado de una medición:}
 
-El resultado de cualquier proceso de medición se compone del valor medido (valor o medida de la magnitud en cuestión), de un 
-símbolo que representa la unidad y del error que indica la ``exactitud'' con que se conoce el valor medido.  Con lo cual, el 
-resultado de una medición queda expresado de la siguiente forma:
+El resultado de cualquier proceso de medición se compone del valor medido, de un símbolo que representa la unidad y del error que 
+indica la ``exactitud'' con que se conoce el valor medido.  Con lo cual, el resultado de una medición queda expresado de la 
+siguiente forma:
 
 \begin{equation}
  X = (X_m \pm E_{abs})[\text{unidad de medida}]
