--- a/bases.tex
+++ b/bases.tex
@@ -474,12 +474,13 @@ Las cantidades vectoriales en cambio necesitan para definirsa tres característi
 Gráficamente a las cantidades vectoriales se las representa por medio de una flecha.\\
 
 Los vectores se representan geométricamente con flechas y se le asigna por lo general una letra que en su parte 
-superior lleva una pequeña flecha de izquierda a derecha como se muestra en la figura siguiente:  
+superior lleva una pequeña flecha de izquierda a derecha como se muestra en la figura siguiente:\\  
 
-\begin{center}
- \includegraphics[scale = 0.4]{images/vector.png}
- % vector.png: 338x218 px, 72dpi, 11.92x7.69 cm, bb=0 0 338 218
-\end{center}
+\begin{figure}[H]
+   \centering
+\includegraphics[width=0.7\textwidth]{images/vector_uno.eps}
+  \caption{\small{Representación de un vector $\vec{A}$ en el plano cartesiano.}}
+   \end{figure}
 
 \textbf{Módulo}\\
 
@@ -488,7 +489,7 @@ representa como A, $|\vec{A}|$ ó $\|\vec{A}\|$. También denominado como la int
 
 \textbf{Dirección:}\\
 
-Es el ángulo que se forma desde la horizontal hasta el vector tomando el sentido antihorario como positivo y negativo 
+Es el ángulo ($\theta$) que se forma desde la horizontal hasta el vector tomando el sentido antihorario como positivo y negativo 
 en el sentido horario.\\
 
 \textbf{Sentido:}\\
@@ -500,10 +501,11 @@ simboliza con un signo menos $-\vec{A}$.\\
 
 \subsection{Representación en coordenadas cartesianas:}
 
-\begin{center}
- \includegraphics[scale = 0.3]{images/Vector_in_2D_space.png}
- % Vector_in_2D_space.png: 646x733 px, 96dpi, 17.09x19.39 cm, bb=0 0 484 550
-\end{center}
+\begin{figure}[H]
+   \centering
+\includegraphics[width=0.7\textwidth]{images/vector_dos.eps}
+  \caption{\small{Representación de las coordenadas cartesianas del vector $\vec{A}$ en el plano cartesiano.}}
+   \end{figure}
 
 En Matemáticas y Física a los vectores los representamos mediante un sistema de referencia cartesiano, y así de esta 
 manera todo vector posee lo que se denomina coordenadas rectángulares. Estas componentes son las proyecciones del 
@@ -546,10 +548,11 @@ Y a los cosenos directores son los cosenos de los ángulos directores simplement
 
 \subsection{Representación en coordenadas polares:}
 
-\begin{center}
- \includegraphics[scale = 0.77]{images/picture1-0.png}
- % picture1-0.png: 250x227 px, 72dpi, 8.82x8.01 cm, bb=0 0 250 227
-\end{center}
+\begin{figure}[H]
+   \centering
+\includegraphics[width=0.7\textwidth]{images/vector_tres.eps}
+  \caption{\small{Representación de las coordenadas polares del vector $\vec{A}$ en el plano cartesiano.}}
+   \end{figure}
 
 Los vectores usualmente también se los representa en función de su módulo y dirección:
 
@@ -559,10 +562,11 @@ Los vectores usualmente también se los representa en función de su módulo y d
 
 \subsection{Representación en coordenadas geográficas:}
 
-\begin{center}
- \includegraphics[angle=0.5]{images/vector2.jpg}
- % vector2.jpg: 234x201 px, 100dpi, 5.94x5.11 cm, bb=0 0 168 145
-\end{center}
+\begin{figure}
+ \centering
+ \includegraphics[width=0.7\textwidth]{images/vector2.jpg}
+   \caption{\small{Representación de las coordenadas geográficas de los vectores $\vec{A}$ y $B$.}}
+\end{figure}
 
 Un vector queda representado en coordenadas geográficas indicando primero su módulo, luego indicando a cual polo sea el 
 Norte o el Sur al cual el vector está más cercano, posteriormente el ángulo desde ese eje hacia el vector y finalmente 
@@ -575,10 +579,11 @@ tradicional de los escalares.
 
 \subsubsection{Método del paralelogramo:}
 
-\begin{center}
+\begin{figure}
+\centering
  \includegraphics[scale=0.6]{images/suma-vectores-metodo-paralelogramo.jpg}
- % suma-vectores-metodo-paralelogramo.jpg: 360x263 px, 96dpi, 9.52x6.96 cm, bb=0 0 270 197
-\end{center}
+    \caption{\small{Representación de la suma entre dos vectores.}}
+\end{figure}
 
 El método del paralelogramo es un procedimiento gráfico sencillo que permite hallar la suma de dos vectores.
 
@@ -591,10 +596,11 @@ El método del paralelogramo es un procedimiento gráfico sencillo que permite h
 
 \subsubsection{Método cabeza - cola:}
 
-\begin{center}
+\begin{figure}[H]
  \includegraphics[scale=0.7]{images/suma-vectores-metodo-cabeza-cola.jpg}
+    \caption{\small{Representación del método cabeza - cola.}}
  % suma-vectores-metodo-cabeza-cola.jpg: 410x261 px, 96dpi, 10.85x6.91 cm, bb=0 0 308 196
-\end{center}
+\end{figure}
 
 Se trata de una variante del método del paralelogramo. Se desplaza el vector $\vec{b}$ paralelamente hasta el extremo 
 del vector $\vec{a}$. El lado que completa el triángulo es el vector suma ($\vec{a} + \vec{b}$), cuyo inicio está en el 
@@ -639,7 +645,7 @@ dos es: $\vec{c} =\vec{a}+\vec{b}$ tal que: $\vec{c} = (a_x + b_x)\vec{i} +(a_y+
 
 \subsection{Producto escalar o punto:}
 
-\begin{figure}[ht]
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.7]{images/productoescalar.png}
  % productoescalar.png: 200x200 px, 72dpi, 7.06x7.06 cm, bb=0 0 200 200
@@ -670,7 +676,7 @@ La proyección de un vector $\vec{b}$ sobre otro vector $\vec{a}$ se define como
 
 \subsection{Producto vectorial de vectores:}
 
-\begin{figure}[ht]
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.1]{images/1200px-Cross_product_parallelogram.png}
  % 1200px-Cross_product_parallelogram.svg.png: 1200x938 px, 72dpi, 42.33x33.09 cm, bb=0 0 1200 938
