--- a/book.tex
+++ b/book.tex
@@ -10,6 +10,7 @@ normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
 \usepackage{float}
 \usepackage{textcomp}
 \usepackage[spanish,es-tabla]{babel}
+\usepackage[colorlinks=true,linkcolor=magenta]{hyperref}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -106,6 +107,7 @@ Updated: $Date: 2019/10/23$.\\
 \end{center}
 
 %=========================================
+\addcontentsline{toc}{chapter}{Índice general}
 \tableofcontents 
 \cleardoublepage  %
 %\pagestyle{fancy} % Encabezados
