--- a/bases.tex
+++ b/bases.tex
@@ -564,7 +564,7 @@ Los vectores usualmente también se los representa en función de su módulo y d
 
 \begin{figure}
  \centering
- \includegraphics[width=0.7\textwidth]{images/vector2.jpg}
+ \includegraphics[width=1.1\textwidth]{images/vector_cuatro.eps}
    \caption{\small{Representación de las coordenadas geográficas de los vectores $\vec{A}$ y $B$.}}
 \end{figure}
 
@@ -581,7 +581,7 @@ tradicional de los escalares.
 
 \begin{figure}
 \centering
- \includegraphics[scale=0.6]{images/suma-vectores-metodo-paralelogramo.jpg}
+ \includegraphics[scale=0.9]{images/vector_cinco.eps}
     \caption{\small{Representación de la suma entre dos vectores.}}
 \end{figure}
 
@@ -597,7 +597,7 @@ El método del paralelogramo es un procedimiento gráfico sencillo que permite h
 \subsubsection{Método cabeza - cola:}
 
 \begin{figure}[H]
- \includegraphics[scale=0.7]{images/suma-vectores-metodo-cabeza-cola.jpg}
+ \includegraphics[scale=1.1]{images/vector_seis.eps}
     \caption{\small{Representación del método cabeza - cola.}}
  % suma-vectores-metodo-cabeza-cola.jpg: 410x261 px, 96dpi, 10.85x6.91 cm, bb=0 0 308 196
 \end{figure}
@@ -647,7 +647,7 @@ dos es: $\vec{c} =\vec{a}+\vec{b}$ tal que: $\vec{c} = (a_x + b_x)\vec{i} +(a_y+
 
 \begin{figure}[H]
  \centering
- \includegraphics[scale=0.7]{images/productoescalar.png}
+ \includegraphics[width=0.7\textwidth]{images/vector_siete.eps}
  % productoescalar.png: 200x200 px, 72dpi, 7.06x7.06 cm, bb=0 0 200 200
  \caption{Ilustración geométrica del producto entre dos vectores.}
  \label{fig:escalar}
