--- a/book.tex
+++ b/book.tex
@@ -30,7 +30,7 @@ normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
 \usepackage{blindtext}
 \newcommand{\q}[1]{>>\textit{#1}<<}
 
-\title{FÍSICA 1ro BGU}   
+\title{Introducción a la Física}   
 \author{Julio César Andrade L.} 
 \date{\today} 
 
@@ -62,7 +62,7 @@ normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
 \begin{titlepage}
 		\centering{
 			{\fontsize{40}{48}\selectfont 
-			Primer en Física}
+			Introducción a la Física}
 		}\\
 			
 		\vspace{10mm}
