--- a/analisis_errores.tex
+++ b/analisis_errores.tex
@@ -204,7 +204,7 @@ no existir, y cuando existe no necesariamente es única.
  
 \subsection{Error estadístico de la serie de N medidas:}
 
-Dada  una  serie  de N  mediciones  de  la  magnitud $x$,  se  define  en  primer  lugar la desviación  de  la medición $ε_i$,  
+Dada  una  serie  de N  mediciones  de  la  magnitud $x$,  se  define  en  primer  lugar la desviación  de  la medición $epsilon_i$,  
 la  cual  se  mide  respecto  del  valor  medio $x$  y  no  es  más  que  la  diferencia  existente entre  el  valor i-ésimo  
 medido y el  valor  más  probable  (o  valor  medio  o  promedio  aritmético  de  la serie, i.e. $\overline{x}$): 
 
