--- a/dinamica.tex
+++ b/dinamica.tex
@@ -275,7 +275,7 @@ reduzca su velocidad a 20 km/h durante los siguientes 10 segundos de aplicada la
 \item ¿Cómo cambia la el valor de la aceleración que adquiere un cuerpo si se duplica su masa y se reduce a la mitad el módulo de 
 la fuerza aplicada sobre el mismo?.
 
-\item Un vehículo de 800 kg se mueve en un tramo recto y horizontal de autovı́a a 72 km/h. Si por una averı́a deja de funcionar 
+\item Un vehículo de 800 kg se mueve en un tramo recto y horizontal de autovía a 72 km/h. Si por una avería deja de funcionar 
 el motor y se detiene a los 100 m, calcula la fuerza de rozamiento.
 
 \item ¿Cuál es la masa de un cuerpo, si al aplicarle una fuerza de 420 N de produce una aceleración de $8.4 m/s^2$ ?
@@ -313,12 +313,11 @@ constante
 
 \item ¿Cuál es la fuerza necesaria para que un móvil de 1700 Kg, partiendo de reposo adquiera una rapidez de $2 m/s^2$ en 12.4 s?
 
-\item Un protón tiene una masa de $1,7 \times 10^{−27} kg$ y se mueve con una velocidad de $2 \times 10^8 m/s$. ¿Qué fuerza será 
-necesaria para reducir su velocidad a $10^8 m/s$ en 0.0001 s?
+\item Un protón tiene una masa de $1,7 \times 10^{-27} kg$ y se mueve con una velocidad de $2 \times 10^{8} m/s$. ¿Qué fuerza será 
+%necesaria para reducir su velocidad a $10^8 m/s$ en 0.0001 s?
 
 \item Calcular la velocidad final con la que un bloque de masa 10 kg llega a la parte inferior de un plano inclinado de 20 cm 
-de largo y 15 cm de alto. Considérese que no hay fuerzas de rozamiento y que la el valor de la aceleración de la gravedad
-igual a $10 m/s^2$.
+de largo y 15 cm de alto. Considérese que no hay fuerzas de rozamiento y que la el valor de la aceleración de la gravedad igual a $10 m/s^2$.
 
 \item Dos bloques de masas $m_1 = 20 kg$ y $m_2 = 8 kg$, están unidos mediante una cuerda homogénea inextensible que pesa 2 kg. Se
 aplica al conjunto una fuerza vertical hacia arriba de 560 N. Calcular: a) La aceleración del conjunto; b) Las fuerzas que actúan 
