--- a/energia.tex
+++ b/energia.tex
@@ -192,7 +192,7 @@ plano inclinado?
 compresor funciona ininterrumpidamente?
 
 \item Una fuerza de 150 N paralela a un plano inclinado de ángulo $30^\circ$ actúa sobre un cuerpo de masa 10 Kg. Si el cuerpo 
-asciende 5 m por el plano inclinado y μ= 0,2. Calcular la energía perdida como calor.
+asciende 5 m por el plano inclinado y $\mu$= 0,2. Calcular la energía perdida como calor.
 
 \item  Un cuerpo 4 kg cae desde 2,3 m de altura sobre un resorte cuya constante es 200 N/m. Calcular la velocidad del cuerpo 
 cuando el resorte se ha comprimido 2.5 cm.
