--- a/gravedad.tex
+++ b/gravedad.tex
@@ -136,7 +136,7 @@ de 20 m/s hacia arriba. ¿Cuándo la distancia entre ellos es de 20m?.
 
 \item Un niño deja caer una piedra desde lo alto de un árbol de 4 m del suelo. Simultáneamente,
  otro niño lanza una piedra desde 
-el suelo hacia arriba con una velocidad de $6 ms^{−1}$
+el suelo hacia arriba con una velocidad de $6 m/s$
 . ¿A qué distancia del
  suelo coinciden las dos piedras en sus respectivas 
 trayectorias?
@@ -149,8 +149,6 @@ del suelo la ve pasar. Calcular: a) El tiempo que tarda en llegar al suelo, b) s
 
 \item Nahiara deja caer una moneda a un pozo y escucha el sonido del agua 2,5 s después de
  iniciarse la caída. Halla: a) La 
-profundida del pozo y b) la velocidad con la que llega al agua (La velocidad
- del sonido: $340ms^{−1}$
-).
+profundidad del pozo y, b) la velocidad con la que llega al agua (La velocidad del sonido $340 m/s$).
 
 \end{enumerate}
