--- a/bases.tex
+++ b/bases.tex
@@ -90,8 +90,8 @@ La forma general de un número en notación científica es: $a\times 10^n$ donde
 
 De ese modo se debe poner mucha atención a ese formato para escribir cualquier número correctamente en notación científica.\\
 
-Por ejemplo el número 0.00000000000000034 expresado en notación científica es $3.4\times10^{16}$, y el número 
-2440000000000000000000000 en cambio expresado de esta manera es $2.4\times10^{24}$, lo cual se ve que resulta fácilmente más 
+Por ejemplo el número 0.00000000000000034 expresado en notación científica es $3.4\times 10^{16}$, y el número 
+2440000000000000000000000 en cambio expresado de esta manera es $2.4\times 10^{24}$, lo cual se ve que resulta fácilmente más 
 comodo usar esta notación y por lo cual demasiado espacio del 
 papel.\\
 
@@ -99,9 +99,9 @@ Otros ejemplos:\\
 
 \textit{Números grandes:}\\
 
-$1230,99 = 1,23099\times10^3$\\
-$3450000000 = 3,45\times10^{9}$\\
-$560000000000000000 = 5,6\times10^{17}$ 
+$1230,99 = 1,23099\times 10^3$\\
+$3450000000 = 3,45\times 10^{9}$\\
+$560000000000000000 = 5,6\times 10^{17}$ 
 
 \begin{tcolorbox}
 Si se trata de un número grande al cual se quiere expresarlo en notación científica el procedimiento es mover el punto décimal 
@@ -112,9 +112,9 @@ número de posiciones recorridas.
 
 \textit{Números pequeños:}\\
 
-$0,00000045 = 4,5\times10^{-7}$\\
-$0,00000006589 = 6,589\times10^{-8}$\\
-$0,0000000000000000000000345 = 3,45\times10^{-23}$\\
+$0,00000045 = 4,5\times 10^{-7}$\\
+$0,00000006589 = 6,589\times 10^{-8}$\\
+$0,0000000000000000000000345 = 3,45\times 10^{-23}$\\
 
 \begin{tcolorbox}
 Si se trata de un número menor que 1 al cual se quiere expresarlo en notación científica el procedimiento es mover el punto 
@@ -150,18 +150,18 @@ Exprese las siguientes cantidades en notación científica:
 Realice las operaciones siguientes y expresar la respuesta en notación científica:
 
 \begin{itemize}
- \item[j.] $(2,5\times10^{9})\times(4\times10^{-6})$
- \item[k.] $1.2\times10^{-7}-4.2\times10^{-5}$ + $30,4\times10^{-4}$
- \item[l.] $(5,5\times10^{14}-35,4\times10^{13})\times 8.9\times10^{-5}$
- \item[m.] $\frac{7,2\times10^{-30}}{0,008\times10^{-24}}$
- \item[n.] $\frac{0,081\times10^{20}}{0,9\times10^{-34}}$
-\item[o.]  $\frac{3,2\times10^{23}}{0,004\times10^{16}}$-$\frac{0,45\times10^{-6}}{0,55\times10^{-10}}$
-\item[p.] $\frac{0,081\times10^{20}}{0,9\times10^{-34}}\times(2,5\times10^{12})$
-\item[q.] $\sqrt{9,8\times10^{-7}+7,5\times10^{-6}+0.52\times 10^{-6}}$
+ \item[j.] $(2,5\times 10^{9})\times(4\times 10^{-6})$
+ \item[k.] $1.2\times 10^{-7}-4.2\times 10^{-5}$ + $30,4\times 10^{-4}$
+ \item[l.] $(5,5\times 10^{14}-35,4\times 10^{13})\times 8.9\times 10^{-5}$
+ \item[m.] $\frac{7,2\times 10^{-30}}{0,008\times 10^{-24}}$
+ \item[n.] $\frac{0,081\times 10^{20}}{0,9\times 10^{-34}}$
+\item[o.]  $\frac{3,2\times 10^{23}}{0,004\times 10^{16}}$-$\frac{0,45\times 10^{-6}}{0,55\times 10^{-10}}$
+\item[p.] $\frac{0,081\times 10^{20}}{0,9\times 10^{-34}}\times(2,5\times 10^{12})$
+\item[q.] $\sqrt{9,8\times 10^{-7}+7,5\times 10^{-6}+0.52\times 10^{-6}}$
 \item[r.] $((0.00005)^3\times (0.003\times 10^{-3})^{-2})^3$
 \item[s.] $\sqrt[5]{\frac{(2.00001\times 10^{-4} - 1.00002\times 10^{-4})^{0.01}}{(0.111111-1.2\times 10^{-2})^{1/3}}}$
 \item[t.] $\sqrt{2\times 10^{-5}}-\sqrt{5\times 10^{-2}} + \sqrt{2} - \sqrt{5}$
-\item[u.] $ (9\times10^{-8})(4\times 10^{13})(0.4\times10^{-3})-(4.2\times 10^7)(0.5\times10^{-6})$
+\item[u.] $ (9\times 10^{-8})(4\times 10^{13})(0.4\times 10^{-3})-(4.2\times 10^7)(0.5\times 10^{-6})$
 \end{itemize}
 
 \section{Magnitudes y Medidas:}
@@ -227,9 +227,7 @@ fundamental del átomo de cesio 133.
 
 \subsubsection{Amperio}
 
-Intensidad de una corriente constante que, mantenida en dos conductores paralelos rectilíneos de longitud infinita, de sección 
-circular despreciable y situados a una distancia de un metro uno del otro, en el vacío, produciría entre estos conductores una 
-fuerza igual a $2 × 10^{−7}$ newton por metro de longitud. 
+%Intensidad de una corriente constante que, mantenida en dos conductores paralelos rectilíneos de longitud infinita, de sección circular despreciable y situados a una distancia de un metro uno del otro, en el vacío, produciría entre estos conductores una fuerza igual a $2 \times 10^{−7}$ newton por metro de longitud. 
 
 \subsubsection{Kelvin}
 
@@ -776,8 +774,8 @@ O)$.
  
  \item Determina las coordenadas cartesianas del vector: $\vec{h}=(13,330^\circ)$.
  
- \item Encuentre el módulo del siguiente vector: 5d−2c, donde d = (34m/s, $330^\circ$ ) y c = (54m/s,
-S$20^\circ$ O).
+ \item Encuentre el módulo del siguiente vector: 5d-2c, donde d = (34m/s, $330^\circ$ ) y c = (54m/s,
+S $20^\circ$ O).
 
  \item Calcula el producto escalar entre $\vec{a}=6\vec{i}-7\vec{j}$ y $\vec{b}=-4\vec{i}+10\vec{j}$.
 
