--- a/parabolico.tex
+++ b/parabolico.tex
@@ -123,6 +123,8 @@ averigua la velocidad inicial del
 Calcular la velocidad del proyectil después de
  los 6s.
 
+\item Se dispara un proyectil con una velocidad inicial de $20\sqrt{2}$ m/s, inclinada $45^\circ$ con respecto a la horizontal. El proyectil pasa por dos puntos situados a una misma altura de 10 m y separados una cierta distancia "d". Calcular en metros esa distancia. 
+
 \item Se dispara un proyectil con una velocidad inicial de 60 m/s y un ángulo de $30^\circ
 $, por encima de
  la horizontal. 
