--- a/biblio.tex
+++ b/biblio.tex
@@ -1,9 +1,21 @@
 \chapter*{Bibliografía:}
 
 \begin{enumerate}
- \item Kuhn, Thomas S., "The Function of Measurement in Modern Physical Science", ISIS 52(2), 161?193, 1961.
- \item Molina M.J.T.- El Método Científico Global.
- \item René Descartes. Discurso del método. segundo título o indicación al título principal Discours de la methode. Pour bien 
+\item Kuhn, Thomas S., "The Function of Measurement in Modern Physical Science", ISIS 52(2), 161?193, 1961.
+ 
+\item Molina M.J.T.- El Método Científico Global.
+ 
+\item René Descartes. Discurso del método. segundo título o indicación al título principal Discours de la methode. Pour bien 
 conduire la raison \& chercher.
- \item Rozenberg, I. M. (2002). O sistema internacional de unidades-SI. Instituto Mauá de Tecnologia.
- \end{enumerate}
+ 
+\item Rozenberg, I. M. (2002). O sistema internacional de unidades-SI. Instituto Mauá de Tecnologia.
+ 
+\item Alonso M., O. Rojo, FÍSICA: Mecánica y Termodinámica, Adisson Wesley, 1979.
+
+\item Panchi Nuñez C., Física Vectorial Elemental, Vol. 1, 8va Ed. Quito,1999.
+
+\item P. Vallejo, J. Zambrano, Física Vectorial, Vol. 1, Séptima Edición, 2019.
+
+\item Profesores del Curso Propedéutico de la Escuela Politécnica Nacional, FÍSICA PARA PREPOLITÉCNICO, PrepoFis Pub, Quito, 2011.  
+
+\end{enumerate}
