--- a/book.tex
+++ b/book.tex
@@ -1,7 +1,6 @@
 % Libro de Física para principiantes
-\documentclass[a5paper,pagesize,10pt,bibtotoc,pointlessnumbers,
+\documentclass[a4paper,pagesize,10pt,bibtotoc,pointlessnumbers,
 normalheadings,DIV=9,fleqn,x11names,table,twoside=false]{scrbook}
-
 % twoside, openright
 \KOMAoptions{DIV=last}
 
@@ -150,6 +149,8 @@ Updated: $Date: 2019/10/23$.\\
 \input{dinamica.tex}
 
 \input{energia.tex}
+
+\input{momentum.tex}
 
 \input{biblio.tex}
 
